T985: Test cases are now listed line by line instead of stacked sideways, to make their placement more natural when opening/closing cases. Case names can still be clicked to open/close, but they no longer have the browser-standard underline that clickable links usually have because changing the address bar is now done via a click event handler instead. This was to add the functionality for storing open cases in the address bar. Also changed the color of the case name font to have better contrast with the red and green colors used to mark failed/successful cases.

--- a/H3DAPI/Util/SGTestFramework/www/index.css
+++ b/H3DAPI/Util/SGTestFramework/www/index.css
@@ -40,10 +40,18 @@ ul > .Category_Item { position:relative; margin-left: 20px;}
   padding: 5px;
   margin: 5px;
 }
+
+.TestCase {
+  clear:both;
+}
+
 .TestCase:hover{
   background-color: hsla(195,53%,79%, 0.45);  
 }
 
+a {
+  color: hsl(269, 52%, 13%);
+}
 .stdout_div {
   position:relative; margin-left: 20px;
   width: 400px;
